[project]
name = "memory-skill-generator"
version = "0.2.0"
description = "MemorySkillGenerator: Learning to Compile Agent Skills via Adaptive Routing, Denoising, and Co-Evolutionary Memory Management"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
